// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccountNavList stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="max-w-xs space-y-4"
>
  <h2
    class="text-2xl font-semibold text-foreground"
  >
    My Account
  </h2>
  <nav
    class="space-y-1"
  >
    <a
      class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
      data-discover="true"
      href="/RefArchGlobal/en-GB/account"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user h-5 w-5"
        data-testid="Account Details-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      Account Details
    </a>
    <a
      class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
      data-discover="true"
      href="/RefArchGlobal/en-GB/account/wishlist"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart h-5 w-5"
        data-testid="Wishlist-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
        />
      </svg>
      Wishlist
    </a>
    <a
      class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
      data-discover="true"
      href="/RefArchGlobal/en-GB/account/orders"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shopping-bag h-5 w-5"
        data-testid="Orders-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10a4 4 0 0 1-8 0"
        />
        <path
          d="M3.103 6.034h17.794"
        />
        <path
          d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
        />
      </svg>
      Orders
    </a>
    <a
      class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
      data-discover="true"
      href="/RefArchGlobal/en-GB/account/addresses"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-map-pin h-5 w-5"
        data-testid="Addresses-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      Addresses
    </a>
  </nav>
</div>
`;

exports[`AccountNavList stories snapshot > LogoutOnly story renders and matches snapshot 1`] = `
<div
  class="max-w-xs space-y-4"
>
  <h2
    class="text-2xl font-semibold text-foreground"
  >
    My Account
  </h2>
  <nav
    class="space-y-1"
  >
    <form
      action="/RefArchGlobal/en-GB/logout"
      class="w-full"
      data-discover="true"
      method="post"
    >
      <button
        class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent cursor-pointer"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-log-out h-5 w-5"
          data-testid="Log Out-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 17 5-5-5-5"
          />
          <path
            d="M21 12H9"
          />
          <path
            d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
          />
        </svg>
        Log Out
      </button>
    </form>
  </nav>
</div>
`;

exports[`AccountNavList stories snapshot > MobileView story renders and matches snapshot 1`] = `
<div
  class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui bg-muted/30 rounded-none shadow-none max-w-md"
  data-slot="card"
>
  <div
    class="p-4"
    data-slot="card-content"
  >
    <h2
      class="text-sm font-semibold text-foreground mb-4"
    >
      My Account
    </h2>
    <nav
      class="space-y-1"
    >
      <a
        class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground border bg-transparent hover:text-sidebar-foreground hover:bg-sidebar-accent"
        data-discover="true"
        href="/RefArchGlobal/en-GB/account"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user h-5 w-5"
          data-testid="Account Details-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        Account Details
      </a>
      <a
        class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground border bg-transparent hover:text-sidebar-foreground hover:bg-sidebar-accent"
        data-discover="true"
        href="/RefArchGlobal/en-GB/account/wishlist"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart h-5 w-5"
          data-testid="Wishlist-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
        Wishlist
      </a>
      <a
        class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground border bg-transparent hover:text-sidebar-foreground hover:bg-sidebar-accent"
        data-discover="true"
        href="/RefArchGlobal/en-GB/account/orders"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shopping-bag h-5 w-5"
          data-testid="Orders-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 10a4 4 0 0 1-8 0"
          />
          <path
            d="M3.103 6.034h17.794"
          />
          <path
            d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
          />
        </svg>
        Orders
      </a>
      <a
        class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground border bg-transparent hover:text-sidebar-foreground hover:bg-sidebar-accent"
        data-discover="true"
        href="/RefArchGlobal/en-GB/account/addresses"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map-pin h-5 w-5"
          data-testid="Addresses-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
          />
          <circle
            cx="12"
            cy="10"
            r="3"
          />
        </svg>
        Addresses
      </a>
    </nav>
  </div>
</div>
`;

exports[`AccountNavList stories snapshot > WithDisabledItem story renders and matches snapshot 1`] = `
<div
  class="max-w-xs space-y-4"
>
  <h2
    class="text-2xl font-semibold text-foreground"
  >
    My Account
  </h2>
  <nav
    class="space-y-1"
  >
    <a
      class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
      data-discover="true"
      href="/RefArchGlobal/en-GB/account"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user h-5 w-5"
        data-testid="Account Details-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      Account Details
    </a>
    <a
      class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
      data-discover="true"
      href="/RefArchGlobal/en-GB/account/wishlist"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart h-5 w-5"
        data-testid="Wishlist-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
        />
      </svg>
      Wishlist
    </a>
    <a
      class="w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap text-sidebar-foreground hover:text-sidebar-foreground hover:bg-sidebar-accent"
      data-discover="true"
      href="/RefArchGlobal/en-GB/account/orders"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shopping-bag h-5 w-5"
        data-testid="Orders-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10a4 4 0 0 1-8 0"
        />
        <path
          d="M3.103 6.034h17.794"
        />
        <path
          d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
        />
      </svg>
      Orders
    </a>
    <button
      class="rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-ui has-[>svg]:px-2.5 w-full px-3 py-2 text-left text-sm font-normal leading-none flex items-center justify-start gap-2 overflow-hidden text-ellipsis whitespace-nowrap opacity-50 cursor-not-allowed pointer-events-none text-muted-foreground"
      data-size="sm"
      data-slot="button"
      data-variant="ghost"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-map-pin h-5 w-5"
        data-testid="Addresses-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      Addresses
    </button>
  </nav>
</div>
`;
